tests/baselines/reference/typeofStripsFreshness.errors.txt
tests/cases/compiler/typeofStripsFreshness.ts(12,7): error TS2322: Type 'Collection<string>' is not assignable to type 'Collection<"all">'.
  Type 'string' is not assignable to type '"all"'.
tests/cases/compiler/typeofStripsFreshness.ts(19,7): error TS2322: Type 'Collection<string>' is not assignable to type 'Collection<Both>'.
  Type 'string' is not assignable to type 'Both'.


==== tests/cases/compiler/typeofStripsFreshness.ts (2 errors) ====
    interface Collection<T> {
        elems: T[];
    }
    interface CollectionStatic {
        new <T>(): Collection<T>;
    }
    declare const Collection: CollectionStatic;
    
    const ALL = "all";
    type All = typeof ALL;
    
    const result: Collection<All> = new Collection();
          ~~~~~~
!!! error TS2322: Type 'Collection<string>' is not assignable to type 'Collection<"all">'.
!!! error TS2322:   Type 'string' is not assignable to type '"all"'.
    
    const ANOTHER = "another";
    type Another = typeof ANOTHER;
    
    type Both = Another | All;
    
    const result2: Collection<Both> = new Collection();
          ~~~~~~~
!!! error TS2322: Type 'Collection<string>' is not assignable to type 'Collection<Both>'.
!!! error TS2322:   Type 'string' is not assignable to type 'Both'.
    